# dvr2

./: README.md  pyproject.toml
dvr2/: config.json  controller_udp_out.py  debug_logger.py  io_connections.py  main.py  old_main.py  overlay_udp_out.py  socket_connections.py  udp_listener.py
tests/: test_dvr2.py
