[tool.poetry]
name = "dvr2"
version = "0.1.0"
description = ""
authors = ["DuncanMcRae <duncan.mcrae@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.3"
Pillow = "^8.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
